# digital-twin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  alembic.ini  celine_dt.db  docker-compose.yaml  dump.yaml  pyproject.toml  skaffold.yaml  taskfile.yaml
.github/workflows/: release.yaml
celine/dt/: __init__.py  main.py  main_deps.py
celine/dt/adapters/: base.py  factory.py  registry.py  (+1 more)
config/: apps.yaml  brokers.yaml  clients.yaml  domains.yaml  modules.yaml  subscriptions.yaml  values.yaml
docs/: apps.md  brokers.md  clients.md  concepts.md  create-module.md  developer-guide.md  simulations.md  subscriptions.md  values.md
dt/: main.py  main_deps.py
dt/adapters/: base.py  sql_api.py
dt/api/: admin.py  recs.py  runs.py  scenarios.py
dt/core/: config.py  db.py  logging.py
dt/simulation/: materialize.py
migrations/: env.py
migrations/versions/: 268358fe0cef_.py
ontologies/: celine-dt-ext.ttl  celine.jsonld  celine.ttl
ontologies/mapper/: obs_meter_energy.yaml  obs_rec_energy.yaml
tests/: conftest.py  test_battery_simulation.py  test_domain_registry.py  test_domain_routing.py  test_fastapi_app.py  test_kpis.py  test_registry.py  test_roi.py  test_runner_direct.py  test_runs.py  test_scenarios.py  test_sql_api_adapter.py  test_template.py  test_values.py
tests/api/: test_apps_describe.py  test_apps_run.py  test_health.py  test_registry_describe_cache.py  test_simulations.py  test_values.py
tests/core/: test_loader.py  test_registry.py
tests/e2e/: test_battery_sizing_e2e.py  test_ev_charging_e2e.py
tests/helpers/: dt_test_runtime.py
(+244 files in other folders)
